feat: add interfaces for SOLID principles, add TDD for better development, edit README.md